--- a/hyprland.conf
+++ b/hyprland.conf
@@ -3,6 +3,8 @@ monitor = eDP-1,1920x1080@240,0x0,1
 
 #on start
 exec-once fcitx -d #Japanese IDE
+exec-once hyprpaper #TODO: code hyprpaper
+#create waybar
 
 window {
     border_size = 5
@@ -13,15 +15,17 @@ window {
     col.inactive_border = rgb(0A0A0A) rbg(222222) 45 deg
     col.nogroup_border = rgb(0A0A0A) rbg(222222) 45 deg
     no_gaps_when_only = 2
+    cursor_inactive_timeout = 10 #after 10 seconds idle, mouse dissappears
     
     layout = dwindle
     dwindle {
         pseudotile = false
-        force_split = 2
+        force_split = 0 #Split based on mouse position
+        smart_resizing = true 
         perserve_split = true
         use_active_for_splits = true
     }
-
+    windowrule = 
     
 
 }
@@ -29,3 +33,9 @@ window {
 misc {
     disable_hyprland_logo = true
 }
+
+
+
+
+
+#binds
