third commit. Made hyprpaper conf. Do hyprlock conf. ROFI config, xdg-portal, and waybar.

--- a/hyprland.conf
+++ b/hyprland.conf
@@ -4,7 +4,7 @@ monitor = eDP-1,1920x1080@240,0x0,1
 #on start
 exec-once fcitx -d #Japanese IDE
 exec-once hyprpaper #TODO: code hyprpaper
-#create waybar
+#create waybar  
 
 window {
     border_size = 5
@@ -16,26 +16,84 @@ window {
     col.nogroup_border = rgb(0A0A0A) rbg(222222) 45 deg
     no_gaps_when_only = 2
     cursor_inactive_timeout = 10 #after 10 seconds idle, mouse dissappears
+    allow_tearing = true
     
     layout = dwindle
     dwindle {
-        pseudotile = false
+        pseudotile = true #enable using mod + p
         force_split = 0 #Split based on mouse position
         smart_resizing = true 
         perserve_split = true
         use_active_for_splits = true
     }
-    windowrule = 
+    windowrulev2 = immediate, class:^(cs2)$ #enables tearing 
+
+}
+
+input {
+    scroll_button_lock = 1
+    touchpad {
+        middle_button_emulation = true
+
+    }
+}
+
+decoration {
+    windowrulev2 = opacity 0.8 0.8,class:^(kitty)$ #makes kitty terminal slightly transparent
+    windowrulev2 = opacity 1.0 override 0.5,class:^(Discord)$ #makes discord slightly transparent when not focused
+    windowrulev2 = opacity 0.8,class:^(firefox)$
+    rounding = 10
+}
+
+animation {
+    enabled = true
+
+    bezier = workspaceBezier, 0.76, 0, 0.24, 1.0
+    bezier = windowBezier, 0.16, 1, 0.3, 1
+    bezier = fadeBezier, 0.22, 1, 0.36, 1
+
+    animation = workspaces, 1, 2, workspaceBezier, slide
+    animation = windows, 1, 1, windowBezier, popin 75%
+    animation = fade, 1, 1, fadeBezier
+    animation = border, 1, 10, default
+    animation = borderangle, 1, 10, loop
+}
+
+gestures {
+    workspace_swipe = true 
+    workspace_swipe_fingers = 2
+    workspace_swipe_distance = 300 #in px
+}
+
+binds {
+    bind = $mainMod, SPACE, exec, rofi #launches graphical app launcher
     
+    # Switch workspaces with mainMod + [0-9]
+    bind = $mainMod, 1, workspace, 1
+    bind = $mainMod, 2, workspace, 2
+    bind = $mainMod, 3, workspace, 3
+    bind = $mainMod, 4, workspace, 4
+    bind = $mainMod, 5, workspace, 5
+    bind = $mainMod, 6, workspace, 6
+    bind = $mainMod, 7, workspace, 7
+    bind = $mainMod, 8, workspace, 8
+    bind = $mainMod, 9, workspace, 9
+    bind = $mainMod, 0, workspace, 10
+
+    # Move active window to a workspace with mainMod + SHIFT + [0-9]
+    bind = $mainMod SHIFT, 1, movetoworkspace, 1
+    bind = $mainMod SHIFT, 2, movetoworkspace, 2
+    bind = $mainMod SHIFT, 3, movetoworkspace, 3
+    bind = $mainMod SHIFT, 4, movetoworkspace, 4
+    bind = $mainMod SHIFT, 5, movetoworkspace, 5
+    bind = $mainMod SHIFT, 6, movetoworkspace, 6
+    bind = $mainMod SHIFT, 7, movetoworkspace, 7
+    bind = $mainMod SHIFT, 8, movetoworkspace, 8
+    bind = $mainMod SHIFT, 9, movetoworkspace, 9
+    bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
 }
 
 misc {
     disable_hyprland_logo = true
 }
-
-
-
-
-
-#binds
