added level.png, finished hyprlock. TODO: binds, waybar and more

--- a/hyprland.conf
+++ b/hyprland.conf
@@ -3,7 +3,8 @@ monitor = eDP-1,1920x1080@240,0x0,1
 
 #on start
 exec-once fcitx -d #Japanese IDE
-exec-once hyprpaper #TODO: code hyprpaper
+exec-once hyprpaper 
+exec-once hyprlock
 #create waybar  
 
 window {
@@ -67,6 +68,7 @@ gestures {
 
 binds {
     bind = $mainMod, SPACE, exec, rofi #launches graphical app launcher
+    bind = $mainMod, 
     
     # Switch workspaces with mainMod + [0-9]
     bind = $mainMod, 1, workspace, 1
