--- a/hyprlock.conf
+++ b/hyprlock.conf
@@ -1,1 +1,18 @@
-a
+general {
+    disable_loading_bar = true
+}
+
+image {
+    monitor = #makes it so every monitor has the photo selected
+    path = /home/henzo/.config/hypr/LEVEL.png
+    size = 1080
+
+}
+
+input {
+    size = 300, 80
+    outline_thickness = 0
+    font_family = Times New Roman
+    place_holder_text = <i></i>
+    position = 810, 300
+}
