created computer specific binds. TODO: add more binds, change theme, enviormental variables, Rofi or River setup, waybar and more.

--- a/hyprland.conf
+++ b/hyprland.conf
@@ -84,6 +84,16 @@ binds {
     bind = $mainMod, Escape, killactive
     bind = $mainMod, q, exec, kitty
     bind = $mainMod, c, exec, code
+    bind = $mainMod, M, exec, wlogout --protocol layer-shell
+
+    #Computer Specific Binds: To find a key, use "wev" in terminal 
+    #and type the keys you need the codes for!
+    #using brightnessctl and pamixer for brightness and volume control respectively
+    bind = ,code:121, exec, pamixer -t # FN + END/mute buttonf
+    bind = ,code:123, exec, pamixer -i 5
+    bind = ,code:122, exec, pamixer -d 5
+    bind = ,code:233, exec, brightnessctl set 10%+
+    bind = ,code:232, exec, brightnessctl set 10%-
     
     # Switch workspaces with mainMod + [0-9]
     bind = $mainMod, 1, workspace, 1
