--- a/hyprpaper.conf
+++ b/hyprpaper.conf
@@ -1,4 +1,4 @@
-preload = /home/henzo/.config/hypr/background.png
-wallpaper =  /home/henzo/.config/hypr/background.png
+preload = ,/home/henzo/.config/hypr/background.png
+wallpaper =  ,/home/henzo/.config/hypr/background.png
 
 splash = true
