added basic swww

--- a/hyprland.conf
+++ b/hyprland.conf
@@ -2,9 +2,13 @@
 monitor = eDP-1,1920x1080@240,0x0,1
 
 #on start
-exec-once = hyprpaper 
-exec-once = hyprlock
+
+# Responsible for imporitng environment variable for GTK applications
+exec-once = systemctl --user import-environment XDG_SESSION_TYPE XDG_CURRENT_DESKTOP
+exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = waybar
+exec-once = /home/henzo/.config/swww/target/release/swww-daemon
+exec-once = /home/henzo/.config/swww/target/release/swww restore
 exec-once = fcitx -d #Japanese IDE
 
 general {
@@ -12,7 +16,7 @@ general {
     gaps_in = 5,5,5,5
     gaps_out = 5,5,5,5
     #gaps_workspaces; gaps_workspaces
-    col.active_border = rgb(D21F3C) rgb(D21F3C) 30 
+    col.active_border = rgb(D21F3C) rgb(D21F3C) 30
     col.inactive_border = rgb(0D3098) rbg(0D3098) 202
     col.nogroup_border = rgb(0A0A0A) rbg(222222) 45 
     layout = dwindle
@@ -28,7 +32,7 @@ dwindle {
         force_split = 0 #Split based on mouse position
         smart_resizing = true 
         use_active_for_splits = true
-        no_gaps_when_only = 2
+        # no_gaps_when_only = (Depricated)
     }
 
 
@@ -78,6 +82,7 @@ gestures {
 binds {
     $mainMod = SUPER
 
+    #TODO: add fullscreen bind
     bind = $mainMod, SPACE, exec, wofi #launches graphical app launcher
     #configure rofi
     bind = $mainMod, f, fullscreen, 0  
@@ -85,6 +90,7 @@ binds {
     bind = $mainMod, q, exec, kitty
     bind = $mainMod, c, exec, code
     bind = $mainMod, M, exec, wlogout --protocol layer-shell
+    bind = $mainMod, S, exec, grim -g "$(slurp)"
 
     #Computer Specific Binds: To find a key, use "wev" in terminal 
     #and type the keys you need the codes for!
@@ -92,8 +98,8 @@ binds {
     bind = ,code:121, exec, pamixer -t # FN + END/mute buttonf
     bind = ,code:123, exec, pamixer -i 5
     bind = ,code:122, exec, pamixer -d 5
-    bind = ,code:233, exec, brightnessctl set 10%+
-    bind = ,code:232, exec, brightnessctl set 10%-
+    bind = ,code:233, exec, brightnessctl set 5%+
+    bind = ,code:232, exec, brightnessctl set 5%-
     
     # Switch workspaces with mainMod + [0-9]
     bind = $mainMod, 1, workspace, 1
