--- a/hyprlock.conf
+++ b/hyprlock.conf
@@ -1,18 +1,38 @@
 general {
-    disable_loading_bar = true
+    hide_cursor = true
 }
 
-image {
-    monitor = #makes it so every monitor has the photo selected
-    path = /home/henzo/.config/hypr/LEVEL.png
-    size = 1080
-
+background {
+    monitor =
+    path = /home/henzo/.config/hypr/space.jpg
+    blur_passes = 0
 }
 
-input {
-    size = 300, 80
+input-field {
+    monitor =
+
     outline_thickness = 0
-    font_family = Times New Roman
-    place_holder_text = <i></i>
-    position = 810, 300
+    font_family = JetBrains Mono
+    
+    #border color
+    outer_color = rgba(0,0,0,0.0)
+    check_color = rgba(255,137,0,1.0)
+
+    fail_timeout = 1000
+}
+
+label {
+    monitor = 
+    position = 150, 750
+    font_family = JetBrains Mono Extrabold
+    font_size = 140
+    text = $TIME 
+}
+
+label {
+    monitor =
+    position = 250, 650
+    font_family = JetBrains Mono 
+    font_size = 70
+    text = hello, $USER
 }
