--- a/hyprland.conf
+++ b/hyprland.conf
@@ -4,6 +4,7 @@ monitor = eDP-1,1920x1080@240,0x0,1
 #on start
 
 # Responsible for imporitng environment variable for GTK applications
+exec-once = hyprlock
 exec-once = systemctl --user import-environment XDG_SESSION_TYPE XDG_CURRENT_DESKTOP
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = waybar
